# tiny-lisp

./: .clang-tidy  BUILD  CLAUDE.md  MODULE.bazel  README.md  evaluator.cpp  evaluator.hpp  main.cpp  parser.cpp  parser.hpp  repl.cpp  repl.hpp  tokenizer.cpp  tokenizer.hpp  value.cpp  value.hpp
examples/: BUILD  bubble_sort.lisp  factorial.lisp  fibonacci.lisp  io_demo.lisp  list_reversal.lisp  nested_lambda_bug.lisp  simple_lambda.lisp
tests/: BUILD  evaluator_test.cpp  parser_test.cpp  repl_test.cpp  tokenizer_test.cpp  value_test.cpp
